Alignments fixes

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -94,6 +94,8 @@ button, button:focus{outline: none;}
 
 body { font-family: 'nowRegular'; color: #556179;}
 
+.h-100 { height: 100%;}
+
 .text-right { text-align: right;}
 
 .customRadio input { position: absolute; opacity: 0; }
@@ -145,7 +147,7 @@ header { padding: 20px 40px; background: var(--main-bg-color);}
 
 /* banner section */
 
-.bannerWrapper { background: var(--main-bg-color); color: #fff; min-height: 350px; align-self: center;}
+.bannerWrapper { background: var(--main-bg-color); color: #fff; height: 350px; align-self: center;}
 
 .homeBannerWrapper { min-height: 600px;}
 
@@ -865,7 +867,7 @@ footer ul.socialIcons li { display: inline-block; font-size: 30px; margin-right:
 
  .actionBtns a.btnSquare { border: 0.1rem solid var(--btn-bg-light-blue); color:var(--btn-bg-light-blue); background: #fff; margin-left: 2rem;}
 
- .faqWrapper { background: url(../images/faq-bg.jpg) no-repeat 0 0; min-height: 500px; background-size: cover ;}
+ .faqWrapper { background: url(../images/faq-bg.jpg) no-repeat 0 0; height: 500px; background-size: cover ;}
 
  .faqWrapper .searchFilter { width: 50%; position: relative;}
 
